added movie info

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 
       <ul id="sandwich-container"></ul>
 
+      <div id="movie-schedule"></div>
 
+      
     </main>
 
     <script type="module" src="./scripts/main.js"></script>
